css/styles.css
@import url('https://rsms.me/inter/inter.css');

html {
    font-family: 'Inter', sans-serif;
}

@supports (font-variation-settings: normal) {
    html {
        font-family: 'Inter var', sans-serif;
    }
}

html {
    box-sizing: border-box;
}

*,
*:before,
*:after {
    margin: 0;
    padding: 0;
    box-sizing: inherit;
}

body {
    padding: 1em;
    font-size: 18px;
    line-height: 1.3;
    color: #333;
    letter-spacing: 0.01em;
}

@media (min-width: 50rem) {
    body {
        font-size: 1.4em;
        line-height: 1.3;
    }
}

h1 {
    margin: 1.5em 0 1em;
    font-size: 3em;
    line-height: 1.1;
    text-align: center;
}

h2 {
    margin: 1.5em 0 0.5em;
    font-size: 1.75em;
    line-height: 1.1;
}

h3 {
    margin: 1.5em 0 0.5em;
    font-size: 1.25em;
    line-height: 1.1;
}

p {
    margin: 1em 0;
}

ol,
ul {
    margin: 0 0 1em 2em;
}

a {
    font-weight: 600;
    color: #f74d73;
}

pre,
code {
    font-family: 'Monaco', monospace;
    background-color: #eee;
}

code {
    font-size: 0.8em;
    line-height: 1.3;
}

code.highlighter-rouge {
    display: inline-block;
    padding: 0.15em 0.3em;
    word-break: break-all;
}

pre {
    margin: 1em 0;
    line-height: 1.1;
    padding: 0.75em;
    overflow: auto;
}

.page-content .inner-wrapper {
    margin: 5em auto;
    max-width: 60rem;
}

article a {
    word-break: break-all;
    text-decoration: none;
    border-bottom: 0.2em solid #f74d73;
}

article img {
    display: block;
    margin: 2em auto;
    max-width: 100%;
    height: auto;
}

article .post-header {
    margin: 1.5em 0 0;
}

article .post-meta-data {
    margin: 0 0 5em;
    text-align: center;
}

article blockquote {
    padding: 1em;
    font-style: italic;
    color: #555;
    background-color: #eee;
}

article blockquote p {
    margin: 0;
}

article > p:first-of-type {
    font-size: 1.2em;
    line-height: 1.3;
    font-weight: 600;
}

.post-list--item {
    margin: 3em auto 1em;
    max-width: 15em;
    padding: 1em;
    display: block;
    font-size: 2em;
    line-height: 1.3;
    color: inherit;
    text-align: center;
    text-decoration: none;
    position: relative;
}

.post-list--item-emoji {
    font-size: 3em;
    line-height: 1;
    position: absolute;
    top: -20%;
    left: calc(50% - 1em / 2);
}

.post-list--item-title {
    margin: 1em 0 0;
    font-weight: 600;
}

.twitter-tweets {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-gap: 1em;
}

